tests/ui-msrv/transmute-ptr-to-usize.stderr
error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              the trait `IntoBytes` is not implemented for `*const usize`
   |                              required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoBytes`:
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
           and $N others
note: required by a bound in `AssertIsIntoBytes`
  --> tests/ui-msrv/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsIntoBytes`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `*const usize`
   |
   = help: the following other types implement trait `IntoBytes`:
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
           and $N others
note: required by a bound in `AssertIsIntoBytes`
  --> tests/ui-msrv/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsIntoBytes`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
